--- a/css/2-layouts/intro.sass
+++ b/css/2-layouts/intro.sass
@@ -11,6 +11,8 @@ section.intro
     flex-direction: row-reverse
     background-image: url("../assets/images/Rechenzentrum.jpg")
     background-size: cover
+    &:target
+      margin-top: 50px
 
     .description
       max-width: 500px
