--- a/includes/intro.jade
+++ b/includes/intro.jade
@@ -1,7 +1,6 @@
 section.intro
     .container-fluid
-        a(id="intro")
-        .hero
+        .hero(id="intro")
             .description
                 h1 Benchmark
                 hr
