--- a/includes/map.jade
+++ b/includes/map.jade
@@ -1,6 +1,6 @@
 section.section-map
     .container
-        .map-heading.text-center.center-block
+        .heading.text-center.center-block
             h1(id="map") Karte
             hr
             p In der Karte werden alle durch die App registrierten Rechenzentren an ihrem Standort angezeigt. Mit einem Klick auf ein Rechenzentrum werden zusätzliche Informationen dargestellt.
