--- a/includes/paper.jade
+++ b/includes/paper.jade
@@ -1,4 +1,7 @@
 section.paper
-    .container-fluid
-        a(id="paper")
-        span Bericht
+    .container
+        .heading.text-center.center-block
+            h1(id="paper") Bericht
+            hr
+            p Zusammenfassender Bericht zum Forschungsprojekt
+
