--- a/includes/survey.jade
+++ b/includes/survey.jade
@@ -1,3 +1,6 @@
-section.survey.container-fluid
-    span Fragebogen
-    a(id="survey")
+section.survey
+    .container
+        .heading.text-center.center-block
+            h1(id="survey") Fragebogen
+            hr
+            p Fragebogen beinhaltet alle für ein Audit relavanten Themen. Diese sind nach ökologischen Aspekten gewichtet.
