--- a/css/app.css
+++ b/css/app.css
@@ -28,6 +28,8 @@ section.intro {
     flex-direction: row-reverse;
     background-image: url("../assets/images/Rechenzentrum.jpg");
     background-size: cover; }
+    section.intro .hero:target {
+      margin-top: 50px; }
     section.intro .hero .description {
       max-width: 500px;
       padding: 20px;
@@ -46,14 +48,18 @@ section {
 
 .container {
   padding: 0px; }
-  .container h1:target {
+
+.heading {
+  max-width: 720px;
+  padding: 10px; }
+  .heading h1:target {
     padding-top: 65px; }
-  .container hr {
+  .heading hr {
     display: block;
     height: 2px;
     margin: 0px;
     background-color: gray; }
-  .container p {
+  .heading p {
     font-size: 18px;
     padding: 5px; }
 
