Embeded Pageflip Engine für Endbericht hinzugefügt

--- a/css/app.css
+++ b/css/app.css
@@ -76,8 +76,7 @@ section.survey {
   background: peachpuff; }
 
 .paper {
-  height: 100vh;
-  background: forestgreen; }
+  height: 100vh; }
 
 footer {
   height: 300px;
