--- a/includes/paper.jade
+++ b/includes/paper.jade
@@ -5,3 +5,5 @@ section.paper
             hr
             p Zusammenfassender Bericht zum Forschungsprojekt
 
+        .embed-responsive-16by9
+            .embed-responsive-item.issuuembed.center-block(data-configid="5010721/11690476" style="height: 75vh")
