--- a/css/app.css
+++ b/css/app.css
@@ -17,29 +17,29 @@ header {
   background: grey;
   font-family: "Roboto 2", "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
-section.intro {
+section#intro {
   background: black; }
-  section.intro .container-fluid {
+  section#intro .container-fluid {
     padding: 0px; }
-  section.intro .hero {
+  section#intro .hero {
     height: 100vh;
     opacity: 0.4;
     display: flex;
     flex-direction: row-reverse;
     background-image: url("../assets/images/Rechenzentrum.jpg");
     background-size: cover; }
-    section.intro .hero:target {
+    section#intro .hero:target {
       margin-top: 50px; }
-    section.intro .hero .description {
+    section#intro .hero .description {
       max-width: 500px;
       padding: 20px;
       align-self: center;
       font-family: "Roboto 2", "Helvetica Neue", Helvetica, Arial, sans-serif;
       color: aqua;
       margin-bottom: 10%; }
-      section.intro .hero .description h1 {
+      section#intro .hero .description h1 {
         font-size: 48px; }
-      section.intro .hero .description p {
+      section#intro .hero .description p {
         font-size: 28px; }
 
 section {
