--- a/index.jade
+++ b/index.jade
@@ -22,6 +22,8 @@ html(lang="de")
         <!-- load script here to improve map rendering time -->
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js")
         script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js")
+        script(src="js/markerclusterer.js")
+        script(src="js/jquery.easypiechart.min.js")
         script(src="//e.issuu.com/embed.js", async="true")
 
 
