--- a/index.jade
+++ b/index.jade
@@ -6,6 +6,11 @@ html(lang="de")
         meta(name="viewport", content="width=device-width, initial-scale=1")
         link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css")
         link(rel="stylesheet", href="css/app.css")
+        link(rel="import" href="bower_components/core-header-panel/core-header-panel.html")
+        link(rel="import" href="bower_components/core-toolbar/core-toolbar.html")
+        link(rel="import" href="bower_components/core-icons/core-icons.html")
+        link(rel="import" href="bower_components/core-icons/image-icons.html")
+        link(rel="import" href="bower_components/paper-elements/paper-elements.html")
         script(src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCC9SXblH8n9ofoI4jgyt5t-AtrE3yWKpk")
         script(src="js/map.js")
 
@@ -22,6 +27,7 @@ html(lang="de")
         <!-- load script here to improve map rendering time -->
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js")
         script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js")
+        script(src="bower_components/webcomponentsjs/webcomponents.min.js")
         script(src="js/markerclusterer.js")
         script(src="js/jquery.easypiechart.min.js")
         script(src="//e.issuu.com/embed.js", async="true")
