--- a/index.jade
+++ b/index.jade
@@ -11,25 +11,39 @@ html(lang="de")
         link(rel="import" href="bower_components/core-icons/core-icons.html")
         link(rel="import" href="bower_components/core-icons/image-icons.html")
         link(rel="import" href="bower_components/paper-elements/paper-elements.html")
-        script(src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCC9SXblH8n9ofoI4jgyt5t-AtrE3yWKpk")
+        // TODO put this logic into the Angular Controller 'mapCtrl' in the app.js file
         script(src="js/map.js")
 
-    body(onload="initialize()")
+    body(onload="initialize()" ng-app="benchmarkApp")
 
         <!-- include separately designed sections -->
         include includes/header
+        .container-fluid.ng-view
+            h4 this is the ng-view element
         include includes/intro
         include includes/map
         include includes/survey
         include includes/paper
         include includes/footer
 
-        <!-- load script here to improve map rendering time -->
-        script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js")
-        script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js")
-        script(src="bower_components/webcomponentsjs/webcomponents.min.js")
-        script(src="libs/markerclusterer.js")
-        script(src="libs/jquery.easypiechart.min.js")
-        script(src="//e.issuu.com/embed.js", async="true")
+        <!-- load script here to improve page rendering time -->
+        // google maps API V3
+        script(src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCC9SXblH8n9ofoI4jgyt5t-AtrE3yWKpk")
+        // jQuery for Bootstrap
+        script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js" type="text/javascript")
+        script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js" type="text/javascript")
+        // Script for Polymer Elements
+        script(src="bower_components/webcomponentsjs/webcomponents.min.js" type="text/javascript")
+        // Libs for Map Control
+        script(src="libs/markerclusterer.js" type="text/javascript")
+        script(src="libs/jquery.easypiechart.min.js" type="text/javascript")
+        // Embedded Page Engine
+        script(src="//e.issuu.com/embed.js", async="true" type="text/javascript")
+        //Angular Scripts
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.js" type="text/javascript")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-route.js" type="text/javascript")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-resource.js" type="text/javascript")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-animate.js" type="text/javascript")
+        script(src="js/app.js")
 
 
