--- a/includes/map.jade
+++ b/includes/map.jade
@@ -1,7 +1,7 @@
 section#paper
     .container
         .heading.text-center.center-block
-            h1(id="map") Karte
+            h1#map Karte
             hr
             p In der Karte werden alle durch die App registrierten Rechenzentren an ihrem Standort angezeigt. Mit einem Klick auf ein Rechenzentrum werden zusätzliche Informationen dargestellt.
         .map-content
