--- a/includes/paper.jade
+++ b/includes/paper.jade
@@ -1,7 +1,7 @@
 section#paper
     .container
         .heading.text-center.center-block
-            h1(id="paper") Bericht
+            h1#paper Bericht
             hr
             p Zusammenfassender Bericht zum Forschungsprojekt
 
